[package]
name = "clawhq-desktop"
version = "0.1.0"
description = "ClawHQ Desktop Client"
authors = ["Sebastian"]
edition = "2021"

[lib]
name = "clawhq_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "clawhq-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
